[package]
name = "safe"
version = "0.1.0"
description = "Sponge API for Field Elements"
categories = ["algorithms", "cryptography", "no-std"]
keywords = ["cryptography", "zero-knowledge", "crypto"]

repository = "https://github.com/dusk-network/safe"
edition = "2021"
license = "MPL-2.0"

[dependencies]
dusk-bls12_381 = { version = "0.13", default-features = false }
# dusk-jubjub = { version = "0.14", default-features = false }
dusk-plonk = { version = "0.19", default-features = false, features = ["alloc"], optional = true }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }
blake2b_simd = { version = "1.0", default-features = false }
# ff = { version = "0.13", default-features = false }

[dev-dependencies]
dusk-hades = "0.24"
dusk-bytes = "0.1"
# criterion = "0.3"
# rand = { version = "0.8", default-features = false, features = ["getrandom", "std_rng"] }

[features]
zk = ["dusk-plonk"]
size_16 = ["rkyv/size_16"]
size_32 = ["rkyv/size_32"]
size_64 = ["rkyv/size_64"]
rkyv-impl = [
    "rkyv/validation",
    "rkyv/alloc",
    "rkyv",
    "bytecheck",
    # "dusk-bls12_381/rkyv-impl"
]
