[package]
name = "safe"
version = "0.1.0"
description = "Sponge API for Field Elements"
categories = ["algorithms", "cryptography", "no-std"]
keywords = ["cryptography", "zero-knowledge", "crypto"]

repository = "https://github.com/dusk-network/safe"
edition = "2021"
license = "MPL-2.0"

[dependencies]
# rkyv = { version = "0.7", optional = true, default-features = false }
# bytecheck = { version = "0.6", optional = true, default-features = false }

[features]
# size_16 = ["rkyv/size_16"]
# size_32 = ["rkyv/size_32"]
# size_64 = ["rkyv/size_64"]
# rkyv-impl = [
#     "rkyv/validation",
#     "rkyv/alloc",
#     "rkyv",
#     "bytecheck",
#     # "dusk-bls12_381/rkyv-impl"
# ]
